--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-<html><head><title>My Website</title></head><body><h1>Hello,World!</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
+    <link rel="stylesheet" href="style.css"
+    <title>Personal Website</title>
+</head>
+<body>
+  <div class="box">
+    <img src="gradpic.png" alt="" class="box-img">
+    <h1>Aljon Libranza</h1>
+    <h5>Web Developer - Web Designer</h5>
+    <p>Professional who designs and builds websites and web applications. They use programming languages such as HTML, CSS, and JavaScript to create websites that are functional and aesthetically pleasing. Web developers may also work with databases, servers, and other technologies to create dynamic and interactive web applications. Their goal is to create websites that are user-friendly, engaging, and accessible to a wide range of users.</p>
+    <div class="column">
+      <div class="column">
+        <div class="rows">
+          <h3> Skills: </h3>
+          <div> Sports: Basketball
+                Online Games: Mobile Legends
+                Computer Programming: c#, c++, html </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="rows">
+            <h3> Experience: </h3>
+            <div> C#, HTML, Phyton in School Activity </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="rows">
+          <h3> Education: </h3>
+          <div> 2015- San Ramon Elementary School
+                2020- Kapayapaan Integrated School
+                2022- Kapayapaan Integrated School </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="column">
+            <div class="rows">
+              <h2> Music: </h2>
+              <div2>I like to listen senti songs because when I hear those
+                 musics it can change my mood and help me to forget for a while
+                  my problems.  </div>
+              </div>
+            </div>
+            <div class="column">
+              <div class="rows">
+                <h2> Movies: </h2>
+                <div2>I love to watch movies because it is one of my
+                  favorite thing to do. Just like watching of action movies,
+                   anime and about vlogging because those of them are one
+                    of my favorite to watch ever since. </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="rows">
+              <h2> Travel: </h2>
+              <div2> I really love to
+                 travel especially here in
+                the philippines.I want to
+                go everywhere that I want
+                because it makes me happy
+                every time I go in the different
+                places and it will memorable for me.
+                  But I know someday I will travel all over
+                    the world.  </div>
+              </div>
+
+            <ul>
+      <li><a href="https://www.facebook.com/aljon.libranza.5?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"><img src="fb.png" alt=""></a></li>
+      <li><a href="https://instagram.com/aljonlbrnza?igshid=ZDc4ODBmNjlmNQ=="><i class="fa-brands fa-instagram"><img src="insta.png" alt=""></a></li>
+      <li><a href="mailto:libranzaaljon@gmail.com"><img src="gmail.png" alt=""></a></li>
+    </ul>
+  </div>
+</head>
+</html>
