--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            zoom: 0.5; /* Adjust the zoom level as needed */
+        }
+    </style>
     <title>Personal Website</title>
 </head>
 <body>
