--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            zoom: 0.1; /* Adjust the zoom level as needed */
+            transform: scale(0.1); /* Decrease the size to 10% */
+            transform-origin: 0 0; /* Set the transformation origin to top-left */
         }
     </style>
     <title>Personal Website</title>
