--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="box">
     <img src="gradpic.png" alt="" class="box-img">
     <h1>Aljon Libranza</h1>
-    <h5>Web Developer - Web Designer1</h5>
+    <h5>Web Developer - Web Designer</h5>
     <p>Professional who designs and builds websites and web applications. They use programming languages such as HTML, CSS, and JavaScript to create websites that are functional and aesthetically pleasing. Web developers may also work with databases, servers, and other technologies to create dynamic and interactive web applications. Their goal is to create websites that are user-friendly, engaging, and accessible to a wide range of users.</p>
     <div class="column">
       <div class="column">
